tests/tooling/fixtures/native/recovery/negative/negative_binary_literal_parser_invalid_literal.objc3
// Expected diagnostic code(s): O3P103.
module NegativeBinaryLiteralParserInvalidLiteral;

let value = 0b;

fn main() -> i32 {
  return 0;
}
